[gd_scene format=3 uid="uid://bl1r45e7rjmfo"]

[ext_resource type="Script" path="res://scripts/MovingBlock.gd" id="1_move"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_block"]
size = Vector2(64, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trigger"]
size = Vector2(64, 32)

[node name="MovingBlock" type="StaticBody2D"]
script = ExtResource("1_move")
move_direction = Vector2(1, 0)
move_distance = 100.0
move_speed = 200.0
trigger_once = true
return_after = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_block")

[node name="Visual" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -8.0
offset_right = 32.0
offset_bottom = 8.0
color = Color(0.3, 0.5, 0.7, 1)

[node name="Arrow" type="Polygon2D" parent="Visual"]
position = Vector2(32, 8)
color = Color(0.2, 0.4, 0.6, 1)
polygon = PackedVector2Array(0, -6, 8, 0, 0, 6)

[node name="TriggerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_trigger")

[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_body_entered"]
